added UserDetails Page

--- a/userDetails.html
+++ b/userDetails.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Users App</title>
+    <title>User Detail Page</title>
 
     <!-- TailwindCSS -->
     <link rel="stylesheet" href="./assets/css/index.css" />
   </head>
   <body class="bg-gradient-to-r from-cyan-500 to-blue-500 p-10">
     <div class="bg-white p-10 rounded max-w-4xl mx-auto">
-      <h4 class="font-semibold text-xl">Getting All Users</h4>
-      <ul class="mt-10 space-y-4" id="users-placeholder">
-      </ul>
+      <h4 id="clickeduserName" class="font-semibold text-xl mb-5"></h4>
+      <!-- <ul class="mt-10 space-y-4" id="users-placeholder"></ul> -->
+      <a href="/" class="bg-cyan-500 px-3 py-2 rounded text-white ">Go Back!</a>
     </div>
 
-    <script type="module" src="./assets/js/main.js"></script>
+    <!-- <script type="module" src="./assets/js/main.js"></script> -->
+    <script type="module" src="./assets/js/detail.js"></script>
   </body>
 </html>
